--- a/templates/base.html
+++ b/templates/base.html
@@ -120,7 +120,7 @@
         <!-- Navigation with DaisyUI Navbar -->
         <div
             class="navbar bg-base-100 shadow-lg z-[9999] relative"
-            x-data="{ cartCount: 0 }"
+            x-data="{ cartCount: {{ cart_count|default:0 }} }"
         >
             <div class="navbar-start">
                 <!-- Mobile menu using DaisyUI dropdown -->
@@ -145,46 +145,8 @@
                         tabindex="0"
                         class="menu menu-sm dropdown-content mt-3 z-[9999] p-2 shadow bg-base-100 rounded-box w-52"
                     >
-                        <li x-data="{ open: false }" @click.away="open = false">
-                            <a @click="open = !open" class="cursor-pointer">
-                                Categories
-                                <svg
-                                    class="w-4 h-4 ml-1 transition-transform"
-                                    :class="{ 'rotate-180': open }"
-                                    fill="none"
-                                    stroke="currentColor"
-                                    viewBox="0 0 24 24"
-                                >
-                                    <path
-                                        stroke-linecap="round"
-                                        stroke-linejoin="round"
-                                        stroke-width="2"
-                                        d="M19 9l-7 7-7-7"
-                                    ></path>
-                                </svg>
-                            </a>
-                            <ul
-                                x-show="open"
-                                x-transition
-                                class="p-2 bg-base-100 rounded-box shadow-lg min-w-[200px] z-[9999] absolute"
-                                id="category-menu"
-                            >
-                                {% for category in categories %}
-                                <li>
-                                    <a
-                                        href="{% url 'products:category_detail' category.slug %}"
-                                    >
-                                        {{ category.name }}
-                                        <span class="badge badge-sm"
-                                            >{{ category.products.count }}</span
-                                        >
-                                    </a>
-                                </li>
-                                {% endfor %}
-                            </ul>
-                        </li>
-                        <li><a href="{% url 'pages:about' %}">About</a></li>
-                        <li><a href="{% url 'pages:contact' %}">Contact</a></li>
+                        <li><a href="/pages/about/">About</a></li>
+                        <li><a href="/pages/contact/">Contact</a></li>
                         <li><a href="/admin/">Admin</a></li>
                     </ul>
                 </div>
@@ -195,46 +157,8 @@
 
             <div class="navbar-center hidden lg:flex">
                 <ul class="menu menu-horizontal px-1">
-                    <li x-data="{ open: false }" @click.away="open = false">
-                        <a @click="open = !open" class="cursor-pointer">
-                            Categories
-                            <svg
-                                class="w-4 h-4 ml-1 transition-transform"
-                                :class="{ 'rotate-180': open }"
-                                fill="none"
-                                stroke="currentColor"
-                                viewBox="0 0 24 24"
-                            >
-                                <path
-                                    stroke-linecap="round"
-                                    stroke-linejoin="round"
-                                    stroke-width="2"
-                                    d="M19 9l-7 7-7-7"
-                                ></path>
-                            </svg>
-                        </a>
-                        <ul
-                            x-show="open"
-                            x-transition
-                            class="p-2 bg-base-100 rounded-box shadow-lg min-w-[200px] z-[9999] absolute"
-                            id="desktop-category-menu"
-                        >
-                            {% for category in categories %}
-                            <li>
-                                <a
-                                    href="{% url 'products:category_detail' category.slug %}"
-                                >
-                                    {{ category.name }}
-                                    <span class="badge badge-sm"
-                                        >{{ category.products.count }}</span
-                                    >
-                                </a>
-                            </li>
-                            {% endfor %}
-                        </ul>
-                    </li>
-                    <li><a href="{% url 'pages:about' %}">About</a></li>
-                    <li><a href="{% url 'pages:contact' %}">Contact</a></li>
+                    <li><a href="/pages/about/">About</a></li>
+                    <li><a href="/pages/contact/">Contact</a></li>
                     <li><a href="/admin/">Admin</a></li>
                 </ul>
             </div>
@@ -259,25 +183,37 @@
                                 />
                             </svg>
                             <span
-                                class="badge badge-sm indicator-item"
+                                class="badge badge-sm indicator-item badge-primary"
                                 x-show="cartCount > 0"
                                 x-text="cartCount"
+                                data-cart-count
                             ></span>
                         </div>
                     </label>
                     <div
                         tabindex="0"
-                        class="mt-3 z-[9999] card card-compact dropdown-content w-52 bg-base-100 shadow"
+                        class="mt-3 z-[9999] card card-compact dropdown-content w-64 bg-base-100 shadow-xl"
                     >
                         <div class="card-body">
-                            <span class="font-bold text-lg"
-                                ><span x-text="cartCount"></span> Items</span
+                            <span class="font-bold text-lg">
+                                <span x-text="cartCount" data-cart-count
+                                    >{{ cart_count|default:0 }}</span
+                                >
+                                item<span x-show="cartCount !== 1">s</span> in
+                                your cart
+                            </span>
+                            <span class="text-info"
+                                >Total: $<span data-cart-total
+                                    >{{ cart_total|default:"0.00" }}</span
+                                ></span
                             >
-                            <span class="text-info">Subtotal: $0.00</span>
                             <div class="card-actions">
-                                <button class="btn btn-primary btn-block">
-                                    View cart
-                                </button>
+                                <a
+                                    href="{% url 'cart:cart_detail' %}"
+                                    class="btn btn-primary btn-block"
+                                >
+                                    Review Your Order
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -406,6 +342,9 @@
                     }
                 });
         </script>
+
+        <!-- Cart Management JavaScript -->
+        <script src="{% static 'js/cart.js' %}"></script>
 
         {% block extra_js %} {% endblock %}
     </body>
