--- a/templates/pages/contact_success.html
+++ b/templates/pages/contact_success.html
@@ -1,5 +1,8 @@
-{% extends 'base.html' %} {% block title %}Message Sent - Kampung Cuisine{%
-endblock %} {% block content %}
+{% extends 'base.html' %}
+
+{% block title %}Message Sent - Kampung Cuisine{% endblock %}
+
+{% block content %}
 <div class="min-h-screen bg-base-100 flex items-center justify-center">
     <div class="container mx-auto px-4">
         <div class="max-w-2xl mx-auto text-center">
