deleting raw msg

--- a/templates/cart/partials/cart_summary.html
+++ b/templates/cart/partials/cart_summary.html
@@ -8,10 +8,7 @@
         <!-- Cart Summary Details -->
         <div class="space-y-3 mb-6">
             <div class="flex justify-between text-sm">
-                <span class="text-gray-600"
-                    >{{ cart.total_items }} item{{ cart.total_items|pluralize
-                    }}</span
-                >
+                <span class="text-gray-600">{{ cart.total_items }} item{{ cart.total_items|pluralize }}</span>
                 <span class="text-gray-900">${{ cart.total_price }}</span>
             </div>
 
