--- a/templates/cart/partials/cart_summary.html
+++ b/templates/cart/partials/cart_summary.html
@@ -8,7 +8,10 @@
         <!-- Cart Summary Details -->
         <div class="space-y-3 mb-6">
             <div class="flex justify-between text-sm">
-                <span class="text-gray-600">{{ cart.total_items }} item{{ cart.total_items|pluralize }}</span>
+                <span class="text-gray-600"
+                    >{{ cart.total_items }} item{{ cart.total_items|pluralize
+                    }}</span
+                >
                 <span class="text-gray-900">${{ cart.total_price }}</span>
             </div>
 
@@ -32,7 +35,10 @@
 
         <!-- Checkout Button -->
         <div class="space-y-3">
-            <button class="btn btn-primary btn-block btn-lg">
+            <a
+                href="{% url 'orders:checkout' %}"
+                class="btn btn-primary btn-block btn-lg"
+            >
                 <svg
                     class="w-5 h-5 mr-2"
                     fill="none"
@@ -47,7 +53,7 @@
                     ></path>
                 </svg>
                 Complete Your Order
-            </button>
+            </a>
 
             <p class="text-xs text-gray-500 text-center">
                 🔒 Safe & secure checkout
